# aestatic

./: .gitignore  README.md  linkcheckerrc  pyproject.toml
.github/workflows/: build.yml  check_links.yml
content/: about-en.md  about.md  about_en.md  error.md  index.md  index_en.md  projects.md  projekte.md  unterricht.md
content/blog/2016_01_31_korrelation/: korrelation.md
content/blog/2016_02_08_radioparadise/: radioparadise.md
content/blog/2016_02_11_anniversary/: anniversary.md
content/blog/2016_02_15_logisches_xor/: logisches_xor.md
content/blog/2016_03_29_reflection_meets_tree/: reflection_meets_tree.md
content/blog/2016_03_30_foreigner/: foreigner.md
content/blog/2016_03_31_snofru/: snofru.md
content/blog/2016_11_13_microchip/: microchip_tipsntricks.md
content/blog/2016_12_30_spectra_physics/: spectra_physics.md
content/blog/2017_01_10_nesolution/: nesolution.md
content/blog/2023_04_18_esp_at/: esp.md
content/blog/2023_09_29_lattice_icecube2/: lattice.md
content/blog/2023_12_05_lattice_diamond/: lattice.md
content/blog/ideas.source/: ideas.md
content/dic/: uebersicht.md
content/dic/bussysteme/: bussysteme.md  can.md  datenintegritaet.md  i2c.md  kanalkodierung.md  rs232.md  test_bussysteme.md  uebersicht.md  uebung_i2c.md
content/dic/digitale_signalverarbeitung/: faltung.md  lti_systeme.md  signale.md  uebersicht.md
content/dic/grundlagen_der_digitaltechnik/: automatentheorie.md  kombinatorik.md  schaltnetze.md  sequentielle_logik.md  synchrones_design.md  test_digitaltechnik.md  test_kombinatorik.md  timing.md  uebersicht.md  uebung_automatentheorie.md
content/dic/halbleiterelemente/: ausgangstreiber.md  bipolarer_transistor.md  datenspeicher.md  (+5 more)
content/english/: about.md  index.md  projects.md
content/hwe/: rpi_zero.md
content/wdic/: raspberry.md
src/aestatic/: __main__.py  markdown.py  processor.py
templates/: article.html  article_english.html  base.html  base_english.html  comments.html  error.html  index.html  index_english.html  metadata.html  page.html  page_english.html  pagination.html  slides.html
(+178 files in other folders)
