[project]
name = "aestatic"
version = "0.1.0"
description = ""
authors = [
    {name = "Günther Jena", email = "guenther@jena.at"},
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.2",
    "libsass>=0.22.0",
    "python-slugify>=8.0.0",
    "pygments>=2.14.0",
    "gitpython>=3.1.30",
    "beautifulsoup4>=4.11.2",
    "qrcode[pil]>=7.4.2",
    "mistune>=3.0.1",
    "minify-html>=0.14.0",
]

[project.scripts]
aestatic = "aestatic.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
